# sistemi_operativi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  alimentatore  alimentatore.c  atomo  atomo.c  attivaore  attivatore  cmake_install.cmake  master  master+  master.c  prova.c  variabili.txt
src/: alimentatore.c  alimentatore2.c  atomo.c  attivatore.c  io.c  master.c  process.c
src/headers/: io.h  process.h  utils.h
src/util/: utils.c  utils.h
